<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="urbantech.presentation.mainactivity.MainActivity">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:iconifiedByDefault="false"
        android:queryHint="Search by Product Name or Brand Name:">
        <requestFocus />
    </SearchView>

</LinearLayout>
